--- a/week01/homework/GA Press Release/about.html
+++ b/week01/homework/GA Press Release/about.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+	<head>
+		<title>about.html</title>
+	</head>
+		<body>
+			<a href="/index.html">index.html</a>
+				<p>For more information, visit General Assembly's website <a href="(https://generalassemb.ly/"/>general assembly</a></p>
 
-</body>
+		</body>
 </html>
