week01 homework updated

--- a/week01/homework/GA Press Release/about.html
+++ b/week01/homework/GA Press Release/about.html
@@ -4,8 +4,8 @@
 		<title>about.html</title>
 	</head>
 		<body>
-			<a href="/index.html">index.html</a>
-				<p>For more information, visit General Assembly's website <a href="(https://generalassemb.ly/"/>general assembly</a></p>
+			<a href="index.html">index.html</a>
+				<p>For more information, visit General Assembly's website <a href="(https://wwww.generalassemb.ly/"/>general assembly</a></p>
 
 		</body>
 </html>
