--- a/week01/homework/GA Press Release/index.html
+++ b/week01/homework/GA Press Release/index.html
@@ -29,7 +29,7 @@
 						</ul>
   
 								<p>For more information, visit General Assembly's website <a href="(https://generalassemb.ly/"/>general assembly</a></p>
-								<a href="/about.html"about.html>about.html</a>
+								<a href="about.html"about.html>about.html</a>
 
 		</body>
 </html>
