--- a/class02/classwork/keanu/about.html
+++ b/class02/classwork/keanu/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="css/styles.css">
+
 	<title></title>
 </head>
 <body>
@@ -18,7 +20,6 @@
 <li>The Matrix</li>
 <li>Bill and Ted's Excellent Adventure</li>
 </ul>
-
 
 
 </body>
