--- a/class05/class05/relaxr/index.html
+++ b/class05/class05/relaxr/index.html
@@ -8,5 +8,96 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+		<div id="container">
+			<header>
+
+				<nav>
+					<a href="#">About</a>
+					<a href="#">FAQ</a>
+					<a href="#">Team</a>
+					<a href="#">Contact Us</a>
+					<a href="#">Blog</a>
+				</nav>
+
+			</header>
+				<main>
+					<div id="main-text">
+
+						<h2>How I Implemented Relaxr in 2 weeks and changed my life.</h2>
+							<div id="paragraph1">
+							<p>
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							</p>
+							</div>
+								<p class="read-more">
+									<a href="#">Read More</a>
+								</p>
+										<hr/>
+
+									<img src="images/blog_photo1.jpg">
+
+										<h2>I traveled across the globe thanks to Relaxar's excel automation</h2>
+											<img src="images/blog_photo2.jpg">
+											<div id="paragraph2">
+												<p>
+												Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+												tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+												quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+												consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+												cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+												proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+												</p>
+											</div>
+													<p class="read-more">
+														<a href="#">Read More</a>
+													</p>
+														<hr/>
+
+					</div>
+						<div class="sidebar">
+							<div id="categories">
+								<p class="nav2">
+								<nav>
+								<span style="font-weight:bold">Categories</span>
+									<a href="#">Success Stories</a>
+									<a href="#">Stats</a>
+									<a href="#">How To&apos;s</a>
+									<a href="#">Best of</a>
+									<a href="#">Business Tips</a>
+								</nav>
+								</p>
+
+							</div>
+									<div id="about-relaxar">
+									<span style="font-weight:bold">About Relaxar</span>
+										<p>
+										this is a bunch of text that describes what is going on, etc etc etc
+										</p>
+									</div>
+
+										<div id="Ad Unit">
+											<img src="images/ad-unit.png">
+										</div>
+						</div>
+
+				</main>
+
+<p id="bottom-section">
+	<div id="bottom-section">
+			<button type="button">Sign Up Now!</button>
+	</div>
+</p>
+
+
+					<footer>
+					Relaxar
+					</footer>
+		</div>
+
 	</body>
 </html>
