--- a/class06/class06/startup-matchmaker/index.html
+++ b/class06/class06/startup-matchmaker/index.html
@@ -20,33 +20,42 @@
 				</nav>
 		</div>
 	</header>
-			<p id="h2"><em>Because two brains <span style="color:#666666"><strike>taste</strike></span> <span style="text-decoration:display">are</span> better than one</em></p>
+			<p id="h2"><em>Because two brains <span style="color:#666666"><strike>taste</strike></span> are better than one</em></p>
 <main>
-	<img src="img/coworking.jpg">
+
 				<section>
 					<div class="wrapper">
 						<div id="section1">
 						<h3>Meet Your Match!</h3>
 							<p>Have a great idea for a product, but need help making it a reality? We're here to help. Startup Matchaker is the best place for developers and designers to find each other.</p>
-							<button>Create a Profile</button>
+							<button id="match">Create a Profile</button>
 						</div>
 					</div>
 				</section>
+
+				<aside>
 					<div class="section2">
 						<div class="wrapper">
 							<div id="profile">
-								<button>Sign Up Now</button>
+								<p>Create a Profile</p>
+								<p>Are you a Designer? Developer? Put yourself out there so that others can find you!</p>
+									<button>Sign Up Now</button>
 							</div>
 
 							<div id="developer">
-								<button>Start Your Search</button>
+								<p>Find a Developer</p>
+								<p>Looking for a fantastic developer to work with on the next big thing? Look no further.</p>
+									<button>Start Your Search</button>
 							</div>
 
 							<div id="designer">
-								<button>Start Your Search</button>
+								<p>Find a Designer</p>
+								<p>Need someone who can make a product intuitive and appealing? Get ready.</p>
+									<button>Start Your Search</button>
 							</div>
 						</div>
 					</div>
+				</aside>
 								<footer>
 									<div class="wrapper">
 									</div>
@@ -57,6 +66,6 @@
 
 </body>
 								<footer>
-									<p>copyright text</p>
+									<p id="footer">&copy; Startup Matchmaker. Made in NY</p>
 								</footer>
 </html>
