--- a/class09/class09/homework/calculator-box/index.html
+++ b/class09/class09/homework/calculator-box/index.html
@@ -25,8 +25,6 @@
 			<div class="clear"></div>
 		</div>
 
-
-		<!-- ADD A SCRIPT TAG AND POINT IT TO JQUERY CDN! -->
-		<script src="js/app.js"></script>
+		<script src="js/app.js">jquery cdn</script>
 	</body>
 </html>
