class12 notes/homework

--- a/final-project/html/index.html
+++ b/final-project/html/index.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 	<title>Christine Boylan | Christine.boylan3@gmail.com</title>
-	<link href="css/style.css" rel="stylesheet">
+	<link href="../css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class id="content">
-	<div class="layer-vertical" id="layer-vetical-1" style="left:2904px;bottom:0px;">
-		<div class="cloud"
+<div id="container">
+	<div class="background">
+		<img src="../css/images/sju_hawk.jpg"/>
+		<img id="skyline" src="../css/images/skyline.gif"/>
 	</div>
-	<div class="layer-vertical" id="layer-vetical-2" style="left:10904px;bottom:0px;">
-	</div>
-
-
-
-
 
 </div>
 </body>
 </html>
+
+
+<footer>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+
+</footer>
