--- a/class11/class11/temp-converter/index.html
+++ b/class11/class11/temp-converter/index.html
@@ -6,7 +6,14 @@
 	</head>
 	<body>
 
+<form>
+      Fairenheit: <input type="text" name="Fairenheit"><br>
+      Celcius: <input type="text" name="Celcius"><br>
+     			 <input type="submit" value="Submit">
+</form>
+
 		<script src="https://code.jquery.com/jquery-2.2.2.min.js"></script>
 		<script src="js/app.js"></script>
+
 	</body>
 </html>
